--- a/Source/Microsoft.Teams.Apps.CompanyCommunicator/ClientApp/package.json
+++ b/Source/Microsoft.Teams.Apps.CompanyCommunicator/ClientApp/package.json
@@ -16,7 +16,6 @@
     "moment": "2.24.0",
     "msteams-ui-components-react": "^0.8.1",
     "msteams-ui-icons-react": "^0.4.1",
-    "node-sass": "^4.14.1",
     "office-ui-fabric-react": "^6.188.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -26,6 +25,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "redux": "^4.0.1",
+    "sass": "^1.32.7",
     "redux-thunk": "^2.3.0",
     "typescript": "3.5.1",
     "typestyle": "^2.0.2"
