--- a/Source/CompanyCommunicator.Common/Microsoft.Teams.Apps.CompanyCommunicator.Common.csproj
+++ b/Source/CompanyCommunicator.Common/Microsoft.Teams.Apps.CompanyCommunicator.Common.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>8.0</LangVersion>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <AssemblyName>CompanyCommunicator.Common</AssemblyName>
+    <AssemblyName>Microsoft.Teams.Apps.CompanyCommunicator.Common</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
