--- a/Source/Test/CompanyCommunicator.Test/Microsoft.Teams.Apps.CompanyCommunicator.Test.csproj
+++ b/Source/Test/CompanyCommunicator.Test/Microsoft.Teams.Apps.CompanyCommunicator.Test.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CompanyCommunicator\Microsoft.Teams.Apps.CompanyCommunicator.csproj" />
+    <ProjectReference Include="..\..\CompanyCommunicator\Microsoft.Teams.Apps.CompanyCommunicator.csproj" />
   </ItemGroup>
 
 
